maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:3: error: identifier expected but integer literal found.
 var sommeAngle:Int=-1
                     ^